@@ -1,5 +1,13 @@
 2012-10-01 Dario Rodriguez <dario.rodriguez@artica.es>
 
+	* godmode/setup/setup_visuals.php: Fixed an error
+	creating array for font_size combo, the array id
+	was created with 1 nomber less size 3 => id 2,
+	size 1 => id 0. It causes wrong size stored in db.
+	Now id equal to size.
+
+2012-10-01 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* include/functions_graph.php: Fixed the calculus
 	for avg, max and min on statwin graphs and combined
 	graphs. 
